# facetoy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: camera_stream_demo.py  face_detection_demo.py
facetoy/: __init__.py
facetoy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
facetoy/config/: __init__.py  base.py  default_config.yaml
facetoy/face_detection/: __init__.py  opencv_detection.py
facetoy/io/: __init__.py  camera.py
facetoy/pipeline/: base.py  pipe_face_transform.py
facetoy/utils/: __init__.py  face_transform.py  vis.py
facetoy/wrappers/: __init__.py  base.py  opencv_detection.py
tests/: test_camera.py  test_config.py  test_face_transform.py  test_pipe_face_transform.py
