[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facetoy"
version = "0.1.0"
description = "A Python package for face detection and image processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sheng FANG"},
]
keywords = ["face-detection", "computer-vision", "image-processing"]


dependencies = [
    "numpy",
    "opencv-python",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
    "isort>=5.13.2",
    "loguru>=0.7.3",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/sheng-fang/facetoy"
Repository = "https://github.com/sheng-fang/facetoy"
Issues = "https://github.com/sheng-fang/facetoy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["facetoy*"]

[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=facetoy --cov-report=term-missing --cov-report=xml"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["facetoy"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
