[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facetoy"
version = "0.1.0"
description = "A Python package for face detection and image processing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sheng FANG"},
]
keywords = ["face-detection", "computer-vision", "image-processing"]


dependencies = [
    "loguru>=0.7.3",
    "numpy",
    "opencv-python",
    "pillow",
    "pydantic>=2.10.6",
    "pydantic-yaml>=1.4.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
    "isort>=5.13.2",
    "loguru>=0.7.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/sheng-fang/facetoy"
Repository = "https://github.com/sheng-fang/facetoy"
Issues = "https://github.com/sheng-fang/facetoy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["facetoy*"]

[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
